--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -24,7 +24,7 @@
             <a class="dropdown-toggle text-light" dropdownToggle style="text-decoration: none;">Welcome {{user.username
                 | titlecase}}</a>
             <div class="dropdown-menu mt-3" *bsDropdownMenu>
-                <a class="dropdown-item">Edit Profile</a>
+                <a routerLink='/member/edit' class="dropdown-item">Edit Profile</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" (click)="logout()">Logout</a>
             </div>
