--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -23,7 +23,7 @@
         <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
             <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}">
             <a class="dropdown-toggle text-light ml-2" dropdownToggle style="text-decoration: none;">Welcome
-                {{user.username
+                {{user.knownAs
                 | titlecase}}</a>
             <div class="dropdown-menu mt-3" *bsDropdownMenu>
                 <a routerLink='/member/edit' class="dropdown-item">Edit Profile</a>
