--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -13,6 +13,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink='/messages' routerLinkActive='active'>Messages</a>
                 </li>
+                <li *appHasRole='["Admin", "Moderator"]' class="nav-item">
+                    <a class="nav-link" routerLink='/admin' routerLinkActive='active'>Admin</a>
+                </li>
             </ng-container>
             <li class="nav-item">
                 <a class="nav-link" routerLink='/errors' routerLinkActive='active'>Errors</a>
@@ -23,7 +26,7 @@
         <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
             <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}">
             <a class="dropdown-toggle text-light ml-2" dropdownToggle style="text-decoration: none;">Welcome
-                {{user.knownAs
+                {{user.knownAs || user.username
                 | titlecase}}</a>
             <div class="dropdown-menu mt-3" *bsDropdownMenu>
                 <a routerLink='/member/edit' class="dropdown-item">Edit Profile</a>
