--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -1,8 +1,13 @@
 <div class="text-center mt-3">
-    <h2>{{predicate === 'liked' ? 'Members I like' : 'Members who like me'}}</h2>
+    <h2 *ngIf="predicate === 'liked'">Members I Like - {{members?.length}} Found</h2>
+    <h2 *ngIf="predicate === 'likedBy'">Members Who Like Me - {{members?.length}} Found</h2>
+    <h2 *ngIf="predicate === 'matches'">Your Matches - {{members?.length}} Found</h2>
     <div class="container mt-3">
         <div class="row">
             <div class="btn-group" name="predicate">
+                <button class="btn btn-primary" btnRadio='matches' [(ngModel)]="predicate" (click)="loadLikesMatches()">
+                    My Matches
+                </button>
                 <button class="btn btn-primary" btnRadio='liked' [(ngModel)]="predicate" (click)="loadLikes()">
                     Members I like
                 </button>
