--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,5 @@
 <div class="text-center mt-3" *ngIf="pagination">
-    <h2>Your Matches - {{pagination?.totalItems}} found</h2>
+    <h2>All Profiles - {{pagination?.totalItems}} found</h2>
 </div>
 
 <div class="container mt-3">
