--- a/client/src/app/members/member-detail/member-detail.component.css
+++ b/client/src/app/members/member-detail/member-detail.component.css
@@ -14,3 +14,8 @@
     background-color: #fff;
     border-top: none;
 }
+
+.customFont {
+    font-family: 'Gemunu Libre', sans-serif;
+    font-family: 'Sora', sans-serif;
+}
