--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -1,4 +1,4 @@
-<div class="text-center mt-3">
+<div class="text-center mt-3 customFont">
     <h2 *ngIf="predicate === 'liked'">Members I Like - {{members?.length}} Found</h2>
     <h2 *ngIf="predicate === 'likedBy'">Members Who Like Me - {{members?.length}} Found</h2>
     <h2 *ngIf="predicate === 'matches'">Your Matches - {{members?.length}} Found</h2>
@@ -24,10 +24,9 @@
     </div>
 </div>
 
-<div class="d-flex justify-content-center" *ngIf="pagination">
+<div class="d-flex justify-content-center customFont" *ngIf="pagination">
     <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
         [(ngModel)]="pagination.currentPage" (pageChanged)="pagedChanged($event)" previousText="&lsaquo;"
         nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
-
     </pagination>
 </div>
