--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="member">
+<div class="row customFont" *ngIf="member">
     <div class="col-4">
         <h1>Your Profile</h1>
     </div>
