--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,8 +1,8 @@
-<div class="text-center mt-3" *ngIf="pagination">
+<div class="text-center mt-3 customFont" *ngIf="pagination">
     <h2>All Profiles - {{pagination?.totalItems}} found</h2>
 </div>
 
-<div class="container mt-3">
+<div class="container mt-3 customFont">
     <form #form="ngForm" class="form-inline mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
         <div class="form-group">
             <label>Age from: </label>
@@ -50,7 +50,7 @@
     </div>
 </div>
 
-<div class="d-flex justify-content-center" *ngIf="pagination">
+<div class="d-flex justify-content-center customFont" *ngIf="pagination">
     <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
         [(ngModel)]="pagination.currentPage" (pageChanged)="pagedChanged($event)" previousText="&lsaquo;"
         nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
