--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -4,13 +4,13 @@
             <i class="fa fa-envelope"></i> Unread
         </button> -->
         <button class="btn btn-primary" btnRadio='AllMail' [(ngModel)]="container" (click)="loadMessages()">
-            <i class="fa fa-envelope"></i> All Mail
+            <i class="fa fa-envelope"></i> All Mail ({{this.totalAllMailUnread}})
         </button>
         <button class="btn btn-primary" btnRadio='Inbox' [(ngModel)]="container" (click)="loadMessages()">
-            <i class="fa fa-envelope-open"></i> Inbox
+            <i class="fa fa-envelope-open"></i> Inbox ({{this.totalInboxUnread}})
         </button>
         <button class="btn btn-primary" btnRadio='Outbox' [(ngModel)]="container" (click)="loadMessages()">
-            <i class="fa fa-paper-plane"></i> Outbox
+            <i class="fa fa-paper-plane"></i> Outbox ({{this.totalOutboxUnread}})
         </button>
     </div>
 </div>
@@ -25,20 +25,30 @@
             <th style="width: 10%; font-size: 14px;">Mark As Read/Unread
                 <div style="margin-left: 30px;" (click)="$event.stopPropagation()" (click)="checkAllMessagesRead()"
                     class="form-check">
-                    <input #checkBox class="form-check-input" type="checkbox" value="" id="flexCheckDefaultAll">
-                    <span style="font-size: 10.0px; margin-right: 0px; margin-left: 0px;">Select Page</span>
+                    <input #checkBox class="form-check-input" type="checkbox" value=""
+                        id="flexCheckDefaultAll{{container}}">
+                    <span style="font-size: 10.0px; margin-right: 0px; margin-left: 0px;">Select Page
+                        ({{messages.length}})</span>
                     <label class="form-check-label" for="flexCheckDefaultAll">
                     </label>
                 </div>
             </th>
 
             <td>
-                <button *ngIf="allSelected == true" (click)="$event.stopPropagation()" (click)="markMessagesRead()"
-                    class="btn btn-danger allSelected" style="background-color: #d1d1d1; width: 50px;"><i
-                        class="fa fa-envelope fa-custom"></i></button>
+                <button *ngIf="allSelected == true" (click)="$event.stopPropagation()"
+                    (click)="markMessagesRead(container)" class="btn btn-danger allSelected"
+                    style="background-color: #36e694; width: 50px;"><i class="fa fa-envelope fa-custom"></i></button>
                 <button disabled *ngIf="allSelected == false" (click)="$event.stopPropagation()"
-                    (click)="markMessagesRead()" class="btn btn-danger allSelected"
-                    style="background-color: #ffffff; width: 50px;"><i class="fa fa-envelope fa-custom"></i></button>
+                    class="btn btn-danger allSelected" style="background-color: #ffffff; width: 50px;"><i
+                        class="fa fa-envelope fa-custom"></i></button>
+
+                <button *ngIf="allSelected == true" (click)="$event.stopPropagation()"
+                    (click)="markMessagesDelete(container)" class="btn btn-danger allSelected"
+                    style="background-color: #f33c3c; width: 50px;"><i class="fa fa-trash fa-custom"></i></button>
+                <button disabled *ngIf="allSelected == false" (click)="$event.stopPropagation()"
+                    class="btn btn-danger allSelected" style="background-color: #ffffff; width: 50px;"><i
+                        class="fa fa-trash fa-custom"></i></button>
+
 
             </td>
             <th style="width: 30%;">
@@ -68,20 +78,37 @@
             <th *ngIf="container == 'AllMail'" style="width: 20%;">
                 <div style="height: 60px;"></div>Sent/Received
             </th>
+
             <th style="width: 20%;">
-                <div style="height: 60px;"></div>Delete
+                <div style="height: 60px;"><span style="font-size: small;"
+                        *ngIf="this.totalAllMail > 0 && container == 'AllMail'">{{(this.pagination.currentPage * 5) -
+                        4}} - {{ (this.pagination.currentPage * 5) -
+                        5 + this.messages.length}} of {{this.totalAllMail}}
+                        messages</span>
+                    <span style="font-size: small;"
+                        *ngIf="this.totalInboxMail > 0 && container == 'Inbox'">{{(this.pagination.currentPage * 5) -
+                        4}} - {{ (this.pagination.currentPage * 5) -
+                        5 + this.messages.length}} of {{this.totalInboxMail}}
+                        messages</span>
+                    <span style="font-size: small;"
+                        *ngIf="this.totalOutboxMail > 0 && container == 'Outbox'">{{(this.pagination.currentPage * 5) -
+                        4}} - {{ (this.pagination.currentPage * 5) -
+                        5 + this.messages.length}} of {{this.totalOutboxMail}}
+                        messages</span>
+                </div>Delete
             </th>
             <th style="width: 20%;"></th>
         </tr>
-        <tr [class.readMessage]='message.setDateRead == "Yes"' [hidden]="loading" *ngFor="let message of messages"
+
+        <tr (click)="checkClickedMessageRead(message.id, message.setDateRead)"
+            [class.readMessage]='message.setDateRead == "Yes"' [hidden]="loading" *ngFor="let message of messages"
             routerLink='{{container === "Outbox" 
             ? "/members/" + message.recipientUsername 
             : "/members/" + message.senderUsername}}' [queryParams]='{tab: 3}'>
             <td>
-                <div style="margin-left: 30px;" (click)="$event.stopPropagation()"
-                    (click)="checkMessageRead(message.id)" class="form-check">
-                    <input #checkBox class="form-check-input" type="checkbox" value=""
-                        id="flexCheckDefault{{message.id}}">
+                <div style="margin-left: 30px;" class="form-check">
+                    <input (click)="$event.stopPropagation()" (click)="checkMessageRead(message.id)" #checkBox
+                        class="form-check-input" type="checkbox" value="" id="flexCheckDefault{{message.id}}">
                     <label class="form-check-label" for="flexCheckDefault">
                     </label>
                 </div>
@@ -91,6 +118,7 @@
             <td *ngIf="message.setDateRead === 'No'"></td>
             <td *ngIf="message.setDateRead === 'Yes'">{{message.content}}</td>
             <td *ngIf="message.setDateRead === 'No'"><b>{{message.content}}</b></td>
+
             <td>
                 <div *ngIf="container === 'Outbox'">
                     <img class="img-circle rounded-circle mr-2"
