--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -85,7 +85,7 @@
                         4}} - {{ (this.pagination.currentPage * 5) -
                         5 + this.messages.length}} of {{this.totalAllMail}}
                         messages</span>
-                    <span style="font-size: small;"
+                    <span style="font-size: small; margin-left: -8px;"
                         *ngIf="this.totalInboxMail > 0 && container == 'Inbox'">{{(this.pagination.currentPage * 5) -
                         4}} - {{ (this.pagination.currentPage * 5) -
                         5 + this.messages.length}} of {{this.totalInboxMail}}
