--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -23,10 +23,9 @@
     <table class="table table-hover" style="cursor: pointer;">
         <tr>
             <th style="width: 10%; font-size: 14px;">Mark As Read/Unread
-                <div style="margin-left: 30px;" (click)="$event.stopPropagation()" (click)="checkAllMessagesRead()"
-                    class="form-check">
-                    <input #checkBox class="form-check-input" type="checkbox" value=""
-                        id="flexCheckDefaultAll{{container}}">
+                <div style="margin-left: 30px;" class="form-check">
+                    <input (click)="$event.stopPropagation()" (click)="checkAllMessagesRead()" #checkBox
+                        class="form-check-input" type="checkbox" value="" id="flexCheckDefaultAll{{container}}">
                     <span style="font-size: 10.0px; margin-right: 0px; margin-left: 0px;">Select Page
                         ({{messages.length}})</span>
                     <label class="form-check-label" for="flexCheckDefaultAll">
