--- a/client/src/app/messages/messages.component.css
+++ b/client/src/app/messages/messages.component.css
@@ -27,3 +27,18 @@
     background-color: #000000;
     border-color: #000000;
 }
+
+.btn-custom {
+    background-color: rgb(221, 221, 221);
+}
+
+.btn-custom:not(:disabled):not(.disabled).active, .btn-custom:not(:disabled):not(.disabled):active, .show>.btn-custom.dropdown-toggle {
+    color: #fff;
+    background-color: #0080ff;
+    border-color: #0080ff;
+}
+
+.btn-custom:focus {
+    outline: none;
+    box-shadow: none;
+  }
