--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -5,13 +5,13 @@
     <div class="container mt-3">
         <div class="row">
             <div class="btn-group" name="predicate">
-                <button class="btn btn-primary" btnRadio='matches' [(ngModel)]="predicate" (click)="loadLikesMatches()">
+                <button class="btn btn-custom" btnRadio='matches' [(ngModel)]="predicate" (click)="loadLikesMatches()">
                     Your Matches
                 </button>
-                <button class="btn btn-primary" btnRadio='liked' [(ngModel)]="predicate" (click)="loadLikes()">
+                <button class="btn btn-custom" btnRadio='liked' [(ngModel)]="predicate" (click)="loadLikes()">
                     Members You Like
                 </button>
-                <button class="btn btn-primary" btnRadio='likedBy' [(ngModel)]="predicate" (click)="loadLikes()">
+                <button class="btn btn-custom" btnRadio='likedBy' [(ngModel)]="predicate" (click)="loadLikes()">
                     Members Who Like You
                 </button>
             </div>
