--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary1 customFont">
     <div class="container">
-        <a class="navbar-brand" routerLink='/' routerLinkActive=''>Dating App</a>
+        <a class="navbar-brand" routerLink='/' routerLinkActive=''>Match Finder</a>
 
         <ul class="navbar-nav mr-auto">
             <ng-container *ngIf="accountService.currentUser$ | async">
