--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <div class="container mt-5 customFont">
-    <div *ngIf="!registerMode" style="text-align: center;">
+    <div *ngIf="!registerMode && !learnMore" style="text-align: center;">
         <h1>Find your match</h1>
         <p class="lead">
             Come on in to view your matches...all you need to do is sign up!
         </p>
         <div class="text-center">
-            <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-2">Register</button>
-            <button class="btn btn-info btn-lg">Learn more</button>
+            <button (click)="registerToggle()" class="btn btn-primary1 btn-lg mr-2">Register</button>
+            <button (click)="learnMoreToggle()" class="btn btn-info btn-lg">Learn more</button>
         </div>
     </div>
 
@@ -15,6 +15,15 @@
             <div class="col-4">
                 <app-register (cancelRegister)="cancelRegisterMode($event)">
                 </app-register>
+            </div>
+        </div>
+    </div>
+
+    <div *ngIf="learnMore" class="container">
+        <div class="row justify-content-center">
+            <div class="col-9">
+                <app-learnmore (cancelLearnMore)="cancelLearnMoreMode($event)">
+                </app-learnmore>
             </div>
         </div>
     </div>
