--- a/client/src/app/members/member-detail/member-detail.component.css
+++ b/client/src/app/members/member-detail/member-detail.component.css
@@ -16,6 +16,7 @@
 }
 
 .customFont {
-    font-family: 'Gemunu Libre', sans-serif;
-    font-family: 'Sora', sans-serif;
+    /* font-family: 'Gemunu Libre', sans-serif;
+    font-family: 'Sora', sans-serif; */
+    font-family: 'Montserrat', sans-serif;
 }
