--- a/client/src/app/members/member-list/member-list.component.css
+++ b/client/src/app/members/member-list/member-list.component.css
@@ -1,4 +1,5 @@
 .customFont {
-    font-family: 'Gemunu Libre', sans-serif;
-    font-family: 'Sora', sans-serif;
+    /* font-family: 'Gemunu Libre', sans-serif;
+    font-family: 'Sora', sans-serif; */
+    font-family: 'Montserrat', sans-serif;
 }
