--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -36,14 +36,15 @@
             <td>
                 <button *ngIf="allSelected == true" (click)="$event.stopPropagation()"
                     (click)="markMessagesRead(container)" class="btn btn-danger allSelected"
-                    style="background-color: #36e694; width: 50px;"><i class="fa fa-envelope fa-custom"></i></button>
+                    style="background-color: hsl(152, 100%, 45%); width: 50px;"><i
+                        class="fa fa-envelope fa-custom"></i></button>
                 <button disabled *ngIf="allSelected == false" (click)="$event.stopPropagation()"
                     class="btn btn-danger allSelected" style="background-color: #ffffff; width: 50px;"><i
                         class="fa fa-envelope fa-custom"></i></button>
 
                 <button *ngIf="allSelected == true" (click)="$event.stopPropagation()"
                     (click)="markMessagesDelete(container)" class="btn btn-danger allSelected"
-                    style="background-color: #f33c3c; width: 50px;"><i class="fa fa-trash fa-custom"></i></button>
+                    style="background-color: #f73022; width: 50px;"><i class="fa fa-trash fa-custom"></i></button>
                 <button disabled *ngIf="allSelected == false" (click)="$event.stopPropagation()"
                     class="btn btn-danger allSelected" style="background-color: #ffffff; width: 50px;"><i
                         class="fa fa-trash fa-custom"></i></button>
@@ -148,7 +149,7 @@
             <td *ngIf="message.setDateRead === 'No'"><b>{{message.messageSent | timeago}}</b></td>
             <td>
                 <button (click)="$event.stopPropagation()" (click)="deleteMessage(message.id)" class="btn btn-danger"
-                    style="background-color: #be3025;">
+                    style="background-color: #f73022;">
                     <div *ngIf="message.setDateRead === 'Yes'">Delete</div>
                     <div *ngIf="message.setDateRead === 'No'"><b>Delete</b></div>
                 </button>
