--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -10,7 +10,8 @@ img {
 
 .bg-primary1 {
     --bs-bg-opacity: 1;
-    background-color: rgb(98, 202, 84) !important;
+    /* background-color: rgb(98, 202, 84) !important; */
+    background-color: rgb(42, 214, 162) !important;
 }
 
 .active {
@@ -19,6 +20,7 @@ img {
 }
 
 .customFont {
-    font-family: 'Gemunu Libre', sans-serif;
-    font-family: 'Sora', sans-serif;
+    /* font-family: 'Gemunu Libre', sans-serif;
+    font-family: 'Sora', sans-serif; */
+    font-family: 'Montserrat', sans-serif;
 }
