--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -24,7 +24,8 @@
   }
   
   .member-tabset > .nav-tabs > li.active {
-    border-bottom: 4px solid #E95420;
+    /* border-bottom: 4px solid #E95420; */
+    border-bottom: 4px solid rgb(42, 214, 162);
     position: relative;
   }
   
@@ -45,3 +46,24 @@
     padding: 15px 0;
   }
   
+  .page-item.active .page-link {
+    z-index: 3;
+    color: #fff;
+    background-color: #0080ff;
+    border-color: #0080ff;
+}
+
+.page-link {
+  color: black;
+}
+
+.page-link:hover {
+  z-index: 2;
+  color: black;
+  background-color: #e9ecef;
+  border-color: #dee2e6;
+}
+
+.nav-link {
+  color: rgb(42, 214, 162);
+}
