Added Messaging Features

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -23,6 +23,10 @@
                     <strong>Member since: </strong>
                     <p>{{member.created | date: 'dd MMM YYYY'}}</p>
                 </div>
+                <div>
+                    <strong>Gender: </strong>
+                    <p>{{member.gender | titlecase}}</p>
+                </div>
             </div>
             <div class="card-footer">
                 <div class="btn-group d-flex">
