--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,31 +1,33 @@
-<div class="card">
+<div class="card customFont">
     <div class="card-body" #scrollMe style="overflow: scroll; height: 535px;" [scrollTop]="scrollMe.scrollHeight">
         <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
             No messages yet...say hi by using the message box below
         </div>
 
         <ul *ngIf="(messageService.messageThread$ | async)?.length > 0" class="chat">
-            <li *ngFor="let message of (messageService.messageThread$ | async)">
-                <div>
+            <li style="border-bottom: 0px solid rgb(214, 214, 214);"
+                *ngFor="let message of (messageService.messageThread$ | async)">
+                <div [class.isUser]="currentUser.knownAs === (message.senderUsername | titlecase)"
+                    [class.isUser2]="currentUser.knownAs !== (message.senderUsername | titlecase)">
                     <span class="chat-img float-right">
                         <img src="{{message.senderPhotoUrl || './assets/user.png'}}" alt="{{message.senderUsername}}"
                             class="rounded-circle">
                     </span>
                     <div class="chat-body">
                         <div class="header">
-                            <small class="text-muted">
-                                <span class="fa fa-clock-o">{{message.messageSent | timeago}}</span>
-                                <span class="text-danger" *ngIf="!message.dateRead 
+                            <small class="customFont">
+                                <span class="fa fa-clock-o"> {{message.messageSent | timeago}}</span>
+                                <span class="" *ngIf="!message.dateRead 
                                 && message.senderUsername !== username">
                                     (unread)
                                 </span>
-                                <span class="text-success" *ngIf="message.dateRead 
+                                <span class="" *ngIf="message.dateRead 
                                 && message.senderUsername !== username">
                                     (read {{message.dateRead | timeago}})
                                 </span>
                             </small>
                         </div>
-                        <p>{{message.content}}</p>
+                        <p style="margin-left: 10px;">{{message.content}}</p>
                     </div>
                 </div>
             </li>
@@ -38,7 +40,8 @@
                 <input name="messageContent" required [(ngModel)]="messageContent" type="text"
                     class="form-control input-sm" placeholder="Send a private message">
                 <div class="input-group-append">
-                    <button [disabled]="!messageForm.valid || loading" class="btn btn-primary" type="submit">Send
+                    <button style="background-color: rgb(0, 184, 0); border: 1px solid rgb(0, 184, 0);"
+                        [disabled]="!messageForm.valid || loading" class="btn btn-primary" type="submit">Send
                         <i *ngIf="loading" class="fa fa-spinner fa-spin"></i>
                     </button>
                 </div>
