--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,30 +1,32 @@
-<div class="container mt-5 customFont">
-    <div *ngIf="!registerMode && !learnMore" style="text-align: center;">
-        <h1>Find your match</h1>
-        <p class="lead">
-            Come on in to view your matches...all you need to do is sign up!
-        </p>
-        <div class="text-center">
-            <button (click)="registerToggle()" class="btn btn-primary1 btn-lg mr-2">Register</button>
-            <button (click)="learnMoreToggle()" class="btn btn-info btn-lg">Learn more</button>
+<div>
+    <div class="container mt-5 customFont">
+        <div *ngIf="!registerMode && !learnMore"
+            style="text-align: center; background-color: rgba(255, 255, 255, 1.0); border-radius: 20px; padding-bottom: 10px;">
+            <h1>Match Finder. Find your match</h1>
+            <p class="lead">
+                Come on in to view your matches...all you need to do is sign up!
+            </p>
+            <div class="text-center">
+                <button (click)="registerToggle()" class="btn btn-primary1 btn-lg mr-2">Register</button>
+                <button (click)="learnMoreToggle()" class="btn btn-info btn-lg">Learn more</button>
+            </div>
         </div>
-    </div>
 
-    <div *ngIf="registerMode" class="container">
-        <div class="row justify-content-center">
-            <div class="col-4">
-                <app-register (cancelRegister)="cancelRegisterMode($event)">
-                </app-register>
+        <div *ngIf="registerMode" class="container">
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <app-register (cancelRegister)="cancelRegisterMode($event)">
+                    </app-register>
+                </div>
+            </div>
+        </div>
+
+        <div *ngIf="learnMore" class="container">
+            <div class="row justify-content-center">
+                <div class="col-9">
+                    <app-learnmore (cancelLearnMore)="cancelLearnMoreMode($event)">
+                    </app-learnmore>
+                </div>
             </div>
         </div>
     </div>
-
-    <div *ngIf="learnMore" class="container">
-        <div class="row justify-content-center">
-            <div class="col-9">
-                <app-learnmore (cancelLearnMore)="cancelLearnMoreMode($event)">
-                </app-learnmore>
-            </div>
-        </div>
-    </div>
-</div>
