--- a/client/src/app/learnmore/learnmore.component.html
+++ b/client/src/app/learnmore/learnmore.component.html
@@ -1,14 +1,15 @@
 <div class="customFont" style="border: 1px solid rgb(218, 218, 218); border-radius: 10px; 
-margin-bottom: 0px;">
+margin-bottom: 0px; background-color: rgba(255, 255, 255, 1.0); border-radius: 20px; padding-bottom: 10px;">
     <div style="text-align: center;">
         <h1>Welcome to Match Finder</h1>
-        <p class="lead">This is an amazing place to meet, match and message with interesting people.</p>
+        <p class="lead">This is an amazing place to meet, match and message with interesting people from around the
+            world.</p>
     </div>
 
-    <img style="border: none; border-radius: 10px;" src='https://media.timeout.com/images/105413402/1372/772/image.jpg'
-        class='img-thumbnail p-1'>
+    <img style="border: none; border-radius: 0px; background-color: transparent;"
+        src='https://res.cloudinary.com/dfnwbedaf/image/upload/v1634229218/524141_bhbobc.jpg' class='img-thumbnail p-1'>
 
     <div class="form-group" style="text-align: center;">
-        <button class="btn btn-light mr-2" (click)="cancel()" type="button">Go Back Home</button>
+        <button class="btn btn-success mr-2" (click)="cancel()" type="button">Go Back Home</button>
     </div>
 </div>
