--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -1,32 +1,35 @@
-<div class="text-center mt-3 customFont">
-    <h2 *ngIf="predicate === 'liked'">Members You Like - {{members?.length}} Found</h2>
-    <h2 *ngIf="predicate === 'likedBy'">Members Who Like You - {{members?.length}} Found</h2>
-    <h2 *ngIf="predicate === 'matches'">Your Matches - {{members?.length}} Found</h2>
-    <div class="container mt-3">
-        <div class="row">
-            <div class="btn-group" name="predicate">
-                <button class="btn btn-custom" btnRadio='matches' [(ngModel)]="predicate" (click)="loadLikesMatches()">
-                    Your Matches
-                </button>
-                <button class="btn btn-custom" btnRadio='liked' [(ngModel)]="predicate" (click)="loadLikes()">
-                    Members You Like
-                </button>
-                <button class="btn btn-custom" btnRadio='likedBy' [(ngModel)]="predicate" (click)="loadLikes()">
-                    Members Who Like You
-                </button>
+<div style="background-color: white; border-radius: 10px; padding: 5px;">
+    <div class="text-center mt-3 customFont">
+        <h2 *ngIf="predicate === 'liked'">Members You Like - {{members?.length}} Found</h2>
+        <h2 *ngIf="predicate === 'likedBy'">Members Who Like You - {{members?.length}} Found</h2>
+        <h2 *ngIf="predicate === 'matches'">Your Matches - {{members?.length}} Found</h2>
+        <div class="container mt-3">
+            <div class="row">
+                <div class="btn-group" name="predicate">
+                    <button class="btn btn-custom" btnRadio='matches' [(ngModel)]="predicate"
+                        (click)="loadLikesMatches()">
+                        Your Matches
+                    </button>
+                    <button class="btn btn-custom" btnRadio='liked' [(ngModel)]="predicate" (click)="loadLikes()">
+                        Members You Like
+                    </button>
+                    <button class="btn btn-custom" btnRadio='likedBy' [(ngModel)]="predicate" (click)="loadLikes()">
+                        Members Who Like You
+                    </button>
+                </div>
             </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-2" *ngFor="let member of members">
-                <app-member-card [member]="member"></app-member-card>
+            <div class="row mt-3">
+                <div class="col-2" *ngFor="let member of members">
+                    <app-member-card [member]="member"></app-member-card>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="d-flex justify-content-center customFont" *ngIf="pagination">
-    <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
-        [(ngModel)]="pagination.currentPage" (pageChanged)="pagedChanged($event)" previousText="&lsaquo;"
-        nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
-    </pagination>
+    <div class="d-flex justify-content-center customFont" *ngIf="pagination">
+        <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
+            [(ngModel)]="pagination.currentPage" (pageChanged)="pagedChanged($event)" previousText="&lsaquo;"
+            nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+        </pagination>
+    </div>
 </div>
