--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,4 +1,5 @@
-<form [formGroup]='registerForm' (ngSubmit)="registerForm.valid && register()" autocomplete="off">
+<form style="background-color: white; padding: 10px; border-radius: 10px;" [formGroup]='registerForm'
+    (ngSubmit)="registerForm.valid && register()" autocomplete="off">
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
 
