--- a/client/src/app/lists/lists.component.css
+++ b/client/src/app/lists/lists.component.css
@@ -18,3 +18,19 @@
     outline: none;
     box-shadow: none;
   }
+
+.btn-custom1 {
+    background-color: rgb(221, 221, 221);
+}
+
+.btn-custom1:not(:disabled):not(.disabled).active, .btn-custom1:not(:disabled):not(.disabled):active, .show>.btn-custom1.dropdown-toggle {
+    color: #fff;
+    background-color: #00d459;
+    border-color: transparent;
+    box-shadow: 0 3px 10px #00ff6a;
+}
+
+.btn-custom1:focus {
+    outline: none;
+    box-shadow: none;
+  }
