Made UI Changes

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,5 +1,5 @@
-<div class="row customFont">
-    <h1>{{member.knownAs | titlecase}}</h1>
+<div style="background-color: white; border-radius: 10px; padding: 5px;" class="row customFont">
+    <h1><b>{{member.knownAs | titlecase}}</b></h1>
     <div class="col-4">
         <div class="card">
             <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
